--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,10 @@ dependencies {
     //Shimmer effects
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
+    //Swipe helper
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
