--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -78,6 +79,9 @@ dependencies {
     //Swipe helper
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.4'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
+    //ViewPager
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
